--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
 
+  <script language="javascript" type="text/javascript" src="rocket.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <style>
